======== IMPORTANT: rename this, and add a new "future" section, BEFORE ========
======== making a new DFHack release!                                   ========
================================================================================
# Future

## Fixes
- `fix/dead-units`: fixed script trying to use missing isDiplomat function

## Misc Improvements
- Console:
    - added support for multibyte characters on Linux/macOS
    - made the console exit properly when an interactive command is active (`liquids`, `mode`, `tiletypes`)
- Made the ``DFHACK_PORT`` environment variable take priority over ``remote-server.json``
- `dfhack-run`: added support for port specified in ``remote-server.json``, to match DFHack's behavior
- `remove-stress`:
    - added support for ``-all`` as an alternative to the existing ``all`` argument for consistency
    - sped up significantly
    - improved output/error messages
- `ruby`: sped up handling of onupdate events

## API
- New functions:
    - ``Units::isDiplomat(unit)``
- Exposed ``Screen::zoom()`` to C++ (was Lua-only)

## Lua
- ``gui.widgets``: ``List:setChoices`` clones ``choices`` for internal table changes

## Internals
- jsoncpp: updated to version 1.8.4 and switched to using a git submodule

## Structures
- ``viewscreen_civlistst``: fixed layout and identified many fields

# 0.44.11-alpha1

## Structures
- Dropped 0.44.10 support
- Added support for automatically sizing arrays indexed with an enum
- Removed stale generated CSV files and DT layouts from pre-0.43.05
- ``announcement_type``: new in 0.44.11: ``NEW_HOLDING``, ``NEW_MARKET_LINK``
- ``breath_attack_type``: added ``OTHER``
- ``historical_figure_info.relationships.list``: added ``unk_3a``-``unk_3c`` fields at end
- ``interface_key``: added bindings new in 0.44.11
- ``occupation_type``: new in 0.44.11: ``MESSENGER``
- ``profession``: new in 0.44.11: ``MESSENGER``
- ``ui_sidebar_menus``:
    - ``unit.in_squad``: renamed to ``unit.squad_list_opened``, fixed location